--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <html>
 	<head>
 		<title>My CV</title>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link rel="stylesheet" href="style.css">
+        
 	</head>
 	<body>
         
@@ -13,26 +16,40 @@
 			<h3>Email:doheocha@hotmail.com</h3>
 			<h3>Phone number: 0000 </h3>
 		</div>
-        <div class="main-text">
-            <div>
-                <h2>Education</h2>
-                <h6>DCU - BA of Business Studies</h6>
-                <ul>
-                    <li><p>Studied Business Strategy</p></li>
-                    <li><p>Studied Customer Experience</p></li>
-                    <li><p>Made lots of friends</p></li>
-                </ul>
+        <div class = "container">
+                <div class = "row">
+                    <div class = "column"></div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Education</h5>
+                    <h6>DCU - BA of Business Studies</h6>
+                    <ul>
+                        <li><p>Studied Business Strategy</p></li>
+                        <li><p>Studied Customer Experience</p></li>
+                        <li><p>Made lots of friends</p></li>
+                    </ul>
+                    <a href="#" class="btn btn-primary">See DCU</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Work Experience</h5>
+                    <h6>Future Cast - Marketing</h6>
+                    <ul>
+                        <li><p>Built lots of ads</p></li>
+                        <li><p>Got people to buy things</p></li>
+                        <li><p>had a blast</p></li>
+                    </ul>
+                    <a href="#" class="btn btn-primary">See DCU</a>
+                    </div>
+                </div>
             </div>
+        </div>
+        </div>
 
-            <div>
-                <h2>Work Experience</h2>
-                <h6>Future Cast - Marketing</h6>
-                <ul>
-                    <li><p>Built lots of ads</p></li>
-                    <li><p>Got people to buy things</p></li>
-                    <li><p>had a blast</p></li>
-                </ul>
-            </div>
+
 
             <div>
                 <h2>Skills</h2>
