--- a/index.html
+++ b/index.html
@@ -10,30 +10,33 @@
         
 	</head>
 	<body>
-        
+        <div class = "col-md-12">
 		<div class = "contact-details">
 			<h1>Dara O'hEocha</h1>
 			<h3>Email:doheocha@hotmail.com</h3>
 			<h3>Phone number: 0000 </h3>
 		</div>
+    </div>
         <div class = "container">
-                <div class = "row">
-                    <div class = "column"></div>
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class = "row justify-content-md-center">
+                    <div class = "col-md-4" >
+                    <div class="card">
+                    <img src="Dara Profile.png" class="card-img-top" alt="dara profile">
                     <div class="card-body">
-                    <h5 class="card-title">Education</h5>
-                    <h6>DCU - BA of Business Studies</h6>
-                    <ul>
-                        <li><p>Studied Business Strategy</p></li>
-                        <li><p>Studied Customer Experience</p></li>
-                        <li><p>Made lots of friends</p></li>
-                    </ul>
-                    <a href="#" class="btn btn-primary">See DCU</a>
+                        <h5 class="card-title">Education</h5>
+                        <h6>DCU - BA of Business Studies</h6>
+                        <ul>
+                            <li><p>Studied Business Strategy</p></li>
+                            <li><p>Studied Customer Experience</p></li>
+                            <li><p>Made lots of friends</p></li>
+                        </ul>
+                        <a href="#" class="btn btn-primary">See DCU</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                </div>
+                <div class = "col-md-6 " >
+                <div class="card" >
+                    <img src="Futurecast update v2-02.png" class="card-img-top" alt="dara profile">
                     <div class="card-body">
                     <h5 class="card-title">Work Experience</h5>
                     <h6>Future Cast - Marketing</h6>
@@ -42,22 +45,26 @@
                         <li><p>Got people to buy things</p></li>
                         <li><p>had a blast</p></li>
                     </ul>
+                    </div>
                     <a href="#" class="btn btn-primary">See DCU</a>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
         </div>
 
 
 
-            <div>
+            <div class ="container">
+                <div class = "row justify-content">
                 <h2>Skills</h2>
                 <ul>
                     <li><p>Very Friendly</p></li>
                     <li><p>Knows how to make a CV</p></li>
                     <li><p>Great at waterpolo</p></li>
                 </ul>
+                </div>
             </div>
 
         </div>
